Fix display fortune text size for large texts
Conditionally shrink Daily Fortune font if text greater then 72, 156
and 210 characters. The max length for a daily fortune is 255 (varchar).

Also fixed and error on daily fortune period overlap validation.

[Finishes #61947022]

--- a/app/assets/stylesheets/main/modules/_client_dashboard.scss
+++ b/app/assets/stylesheets/main/modules/_client_dashboard.scss
@@ -27,6 +27,12 @@
 
   .text {
     @include thin-font(32px);
+    word-wrap: break-word;
+    width: 370px;
+
+    &.small  { font-size: 22px; }
+    &.x-small  { font-size: 20px; }
+    &.xx-small  { font-size: 18px; }
   }
 }
 
